--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@react-three/drei": "^9.111.2",
         "@react-three/fiber": "^8.17.5",
+        "@react-three/postprocessing": "^2.16.2",
         "next": "14.2.6",
         "react": "^18",
         "react-dom": "^18",
